--- a/manifest.json
+++ b/manifest.json
@@ -2,23 +2,28 @@
   "manifest_version": 3,
   "name": "Meet Studio",
   "version": "1.0",
-  "description": "Record audio, video and screen with permission",
-  "permissions": ["activeTab", "desktopCapture", "downloads", "storage"],
-  "host_permissions": ["https://*/", "http://*/"],
-  "background": {
-    "service_worker": "background.js"
+  "description": "Record audio and video from multiple sources",
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
   },
   "action": {
-    "default_popup": "popup/popup.html",
+    "default_popup": "src/popup/popup.html",
     "default_icon": {
       "16": "icons/icon16.png",
       "48": "icons/icon48.png",
       "128": "icons/icon128.png"
     }
   },
-  "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
+  "permissions": [
+    "activeTab",
+    "desktopCapture",
+    "downloads",
+    "tabCapture",
+    "storage"
+  ],
+  "background": {
+    "service_worker": "src/background.js"
   }
 }
