--- a/manifest.json
+++ b/manifest.json
@@ -1,29 +1,30 @@
 {
   "manifest_version": 3,
   "name": "Meet Studio",
+  "description": "Record audio and video from multiple sources locally.",
   "version": "1.0",
-  "description": "Record audio and video from multiple sources",
-  "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
+  "permissions": [
+    "microphone",
+    "camera",
+    "storage"
+  ],
+  "host_permissions": [
+    "<all_urls>"
+  ],
+  "background": {
+    "service_worker": "background.js"
   },
   "action": {
-    "default_popup": "src/popup/popup.html",
+    "default_popup": "popup.html",
     "default_icon": {
       "16": "icons/icon16.png",
       "48": "icons/icon48.png",
       "128": "icons/icon128.png"
     }
   },
-  "permissions": [
-    "activeTab",
-    "desktopCapture",
-    "downloads",
-    "tabCapture",
-    "storage"
-  ],
-  "background": {
-    "service_worker": "src/background.js"
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
   }
 }
